Fix overflow text

--- a/src/main.scss
+++ b/src/main.scss
@@ -316,7 +316,8 @@ main {
                 position: absolute;
                 top: 50%;
                 left: 50%;
-                transform: translate(-50%);
+                transform: translate(-50%, -40%);
+                width: 100%;
               }
             }
 
